<resources>
    <!--Nombre de la app-->>
    <string name="app_name">BitNet Security</string>

    <!--Main activity (Login Screen) -->
    <string name="txt_view_usuario">Usuario</string>
    <string name="txt_view_clave">Clave</string>
    <string name="input_usuario">Usuario</string>
    <string name="input_clave">Clave</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="check_box_recordar_usuario">Recordar usuario</string>
    <string name="txt_href_crear_cuenta">Crear una cuenta</string>
    <string name="btn_crear_reporte">Crear reporte</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Registro parte 1-->
    <string name="registro">Registra tus datos</string>
    <string name="cargo">Cargo</string>
    <string name="rut">RUT</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Teléfono</string>
    <string name="fulltime">Full-time</string>
    <string name="parttime">Part-time</string>
    <string name="btn_siguiente">Siguiente</string>
    <!--Registro parte 2-->
    <string name="ya_casi">Ya casi terminas</string>
    <string name="contrasenia">Contraseña</string>
    <string name="contrasenia_confirmar">Confirmar contraseña</string>
    <string name="btn_terminar">Registrarme</string>
    <string name="cargarFoto">Tomar una foto</string>
    <string name="seleccionarFoto">Cargar desde galeria</string>
    <string name="advertencia_terminos">Al registrarte, aceptas los terminos y condiciones de uso de la app.</string>


    <!--Drawer, no se muestran-->
    <string name="nav_draw_open">Abrir Drawer</string>
    <string name="nav_draw_close">Cerrar Drawer</string>


    <!--Drawer, menu lateral-->
    <string name="nav_reporte">Reporte</string>
    <string name="nav_perfiles">Perfiles</string>
    <string name="nav_marcar">Marcar</string>
    <string name="nav_horario">Horario</string>
    <string name="btn_salir">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Crear reporte-->
    <string name="crear_reporte_titulo">Reporte</string>
    <string name="empresa">Empresa</string>
    <string name="faccion">Facción</string>
    <string name="fecha">Fecha</string>
    <string name="turno">Turno</string>
    <string name="guardia">Guardia</string>
    <string name="supervisor">Supervisor</string>
    <string name="redactar_reporte">Novedades</string>
    <string name="btn_cancelar_reporte">Cancelar</string>
    <string name="btn_publicar_reporte">Enviar</string>


    <!--Crear Usuario-->
    <string name="btn_agregar_usuario">Agregar</string>
    <string name="contrasenia_temporal">Contraseña temporal</string>
    <string name="title_activity_registro_exito">registroExito</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>




    <string name="cuentaCreada">¡Cuenta creada!</string>
    <string name="cuentaCreada2">¡Cuenta creada exitosamente!</string>
    <string name="cuentaCreada3">¡Inicia sesión para continuar!</string>
    <string name="cuentaCreadaBtn">Volver</string>

</resources>