<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bitnet"
    android:clickable="false"
    android:contextClickable="false"
    android:longClickable="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="116dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/input_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:layout_marginBottom="28dp"
        android:onClick="login"
        android:text="@string/btn_ingresar"
        app:layout_constraintBottom_toTopOf="@+id/cbRecordar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_clave" />

    <CheckBox
        android:id="@+id/cbRecordar"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:text="@string/check_box_recordar_usuario"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingresar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="53dp"
        android:clickable="true"
        android:contextClickable="true"
        android:onClick="btnCrearCuenta"
        android:text="@string/txt_href_crear_cuenta"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cbRecordar"
        app:layout_constraintTop_toBottomOf="@+id/cbRecordar"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/input_usuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="RUT"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/input_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/input_clave"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="CLAVE"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>